--- a/index.html
+++ b/index.html
@@ -12,6 +12,8 @@
 
     <link href="css/bootstrap.min.css" rel="stylesheet">
     <link href="css/creative.min.css" rel="stylesheet">
+    <link rel="stylesheet" href="https://use.typekit.net/uwe0ace.css">
+<link rel="stylesheet" href="https://use.typekit.net/uwe0ace.css">
 
 <script src="https://use.typekit.net/bud6rlj.js"></script>
 <script>try{Typekit.load({ async: true });}catch(e){}</script>
@@ -21,17 +23,36 @@
 
 <body id="page-top">
 
-<img src="img/kolisha.png"/>
-    <section id="join">
+    <section id="header">
         <div class="container">
             <div class="row">
                 <div class="section-heading">Kol Isha Collective</div>
-                <p><em>a collective exploring voice + power through jewish song</em></p>
+                <div class="description">
+                <p>Kol Isha* is a collective on a quest to unveil the relationship between power and voice as they relate to gender and sex. We gather in community to sing traditional Jewish songs, niggunim (wordless melodies), zemirot (Shabbat songs), and our own written tunes. Our purpose is to awaken the vibrancy of personal and collective voice. </p>
                 <br>
-                <p>Awake vibrant connection to personal and collective voice</p>
-                <br>
-<p style="text-align: center;"><i><a href="https://pivottobloom.typeform.com/to/KX9L7u">apply here</a></i></p>
+                <p>Come join our first retreat March 9-11th in the Bay Area, CA</p>
+                <a href="https://pivottobloom.typeform.com/to/KX9L7u"><div class="button"><h1>Apply Here</h1></div></a>
+            <br>
+                <hr>
+                </div>
+                <div class="details">
+                <img src="img/kolisha.png" class="isha">
 
+<p>Kol Isha = the voice of a woman*</p>
+
+<p>The Talmud Berakhot 24 says: </p>
+<img src="img/talmud.png" class="talmud">
+<p>Shmuel says: A woman’s voice is nakedness, as it is stated “Sweet is your voice and your countenance is alluring” (Song of Songs 2:14).</p>
+                <br>
+
+<p>This passage has been used to silence the voices across history. Various reasons have been given to justify this, such as the erotic power of woman’s voice might overcome a man in prayer, it is required for a woman to be modest and contain herself because of her spiritual powers, the voices of women are too distracting, etc. We recognize the beauty of our tradition and understand that silencing is never justified. This project is designed to remove the blockages created through silencing and unleash the majestic power trapped in hidden locations in our bodies. </p>
+                <br>
+
+<p>*Who is a woman? We are interpreting this to mean one who has been disempowered. We are calling forward the voices of marginalized identities to sing, scream, cry their voices into the space together. This includes self-identified women, gender queer and trans folks, and all those who have suffered from historical oppression.</p> 
+  <hr>
+</div>
+
+                </div>
             </div>
         </div>
     </section>
@@ -39,13 +60,37 @@
     <section id="contact">
         <div class="container">
             <div class="row">
-                <div class="col-lg-8 col-lg-offset-2 text-center">
-                    <div class="section-heading">questions?</div>
-                    <br><br>
+<div class="educator">
+<h1>Facillitators</h1><br>
+                  <div class ="col-md-6 col-sm-6">
+                  <img src="img/hadar.jpg" class="person">
+                  <h3>Hadar Cohen</h3>
+<br>
+<p>Hadar is a fierce feminist and devotional divine-lover. She is a member of alt*div, an alternative divinity school exploring the intersection of justice and spirituality. Hadar teaches and facilitates conversation about Judaism, gender and justice at various organizations and communities. An electrical engineer graduate from Cooper Union, she love learning about the fields of truth through science, social relations, history and religion. </p>
+                  </div>
 
-                    <p>contact me (hadar) at <a href="mailto:hadarcohen32@gmail.com">hadarcohen32@gmail.com</a></p>
+
+
+                  <div class ="col-md-6 col-sm-6">
+                                    <img src="img/hadar.jpg" class="person">
+
+                  <h3>Kiki Lipsett</h3>
+<br>
+
+<p>Kiki is a Jewish educator,  musician, voice teacher, and prayer leader in the Bay Area. She grew up at the intersection of Judaism and music, and finds much joy in creating meaningful, musical Jewish ritual with and for others. She tutors b’nai mitzvah students in Hebrew and Torah trope, and she leads b'nai mitzvah ceremonies. Kiki leads a monthly Rosh Chodesh circle for teenage girls, focusing the curriculum through a Jewish feminist lens. She also teaches private voice lessons to women to empower them to get more comfortable with the sound and power of their own voice. Kiki is the music specialist in several Jewish preschools in the Bay Area. </p>
+</div>
+</div>
+
+</div>
+<hr>
+    </section>
+
+<section id="footer">
+            <div class="col-lg-8 col-lg-offset-2 text-center">
+
+                    <p>questions? contact <a href="mailto:hadarcohen32@gmail.com">hadarcohen32@gmail.com</a></p>
  
-                    <p style="font-size: 36px;"><i>with gratitude to <a href="https://www.moishehouse.org">Moishe House</a> for funding</i> </p>
+                    <p>with gratitude to <a href="https://www.moishehouse.org">Moishe House</a> for funding</p>
                 </div>
             </div>
         </div>
