--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
                 <hr>
                 </div>
                 <div class="details">
-                <img src="img/kolisha.png" class="isha">
+                <img src="img/kolisha.png" class="isha" style="width: auto;max-width: 100%; height: auto;">
 
 <p>Kol Isha = the voice of a woman*</p>
 
@@ -62,9 +62,8 @@
             <div class="row">
 <div class="educator">
 <h1>Facillitators</h1><br>
-                  <div class ="col-md-6 col-sm-6">
-                  <img src="img/hadar.jpg" class="person">
-                  <h3>Hadar Cohen</h3>
+                  <div class ="col-xs-12 col-sm-6 col-lg-8">
+<img src="img/hadar.jpg" class="" style="width: auto;max-width: 100%; height: auto;">                  <h3>Hadar Cohen</h3>
 <br>
 <p>Hadar is a fierce feminist and devotional divine-lover. She is a member of alt*div, an alternative divinity school exploring the intersection of justice and spirituality. Hadar teaches and facilitates conversation about Judaism, gender and justice at various organizations and communities. An electrical engineer graduate from Cooper Union, she love learning about the fields of truth through science, social relations, history and religion. </p>
                   </div>
@@ -72,7 +71,7 @@
 
 
                   <div class ="col-md-6 col-sm-6">
-                                    <img src="img/hadar.jpg" class="person">
+<img src="img/kiki.jpg" class="" style="width: auto;max-width: 100%; height: auto;">
 
                   <h3>Kiki Lipsett</h3>
 <br>
@@ -99,7 +98,5 @@
     <!-- Plugin JavaScript -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-easing/1.3/jquery.easing.min.js"></script>
 
-    <!-- Theme JavaScript -->
-    <script src="js/creative.min.js"></script>
 </body>
 </html>
