--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 <p>Kol Isha = the voice of a woman*</p>
 
 <p>The Talmud Berakhot 24 says: </p>
-<img src="img/talmud.png" class="talmud">
+<img src="img/talmud.png" class="talmud" style="width: auto;max-width: 100%; height: auto;">
 <p>Shmuel says: A woman’s voice is nakedness, as it is stated “Sweet is your voice and your countenance is alluring” (Song of Songs 2:14).</p>
                 <br>
 
