--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
                   <h3>Kiki Lipsett</h3>
 <br>
 
-<p>Kiki is a Jewish educator,  musician, voice teacher, and prayer leader in the Bay Area. She grew up at the intersection of Judaism and music, and finds much joy in creating meaningful, musical Jewish ritual with and for others. She tutors b’nai mitzvah students in Hebrew and Torah trope, and she leads b'nai mitzvah ceremonies. Kiki leads a monthly Rosh Chodesh circle for teenage girls, focusing the curriculum through a Jewish feminist lens. She also teaches private voice lessons to women to empower them to get more comfortable with the sound and power of their own voice. Kiki is the music specialist in several Jewish preschools in the Bay Area. </p>
+<p>Kiki is a musician, vocal coach, and prayer leader in the Bay Area. She grew up at the intersection of Judaism and music, and finds much joy in creating prayerful Jewish music with others. Kiki teaches private lessons and group workshops, combining vocal technique, somatic practices, breath work, and silliness! She has a particular interest in supporting women to unleash the full expression of their voice. </p>
 </div>
 </div>
 
