--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
 <p>This passage has been used to silence the voices across history. Various reasons have been given to justify this, such as the erotic power of woman’s voice might overcome a man in prayer, it is required for a woman to be modest and contain herself because of her spiritual powers, the voices of women are too distracting, etc. We recognize the beauty of our tradition and understand that silencing is never justified. This project is designed to remove the blockages created through silencing and unleash the majestic power trapped in hidden locations in our bodies. </p>
                 <br>
 
-<p>*Who is a woman? We are interpreting this to mean one who has been disempowered. We are calling forward the voices of marginalized identities to sing, scream, cry their voices into the space together. This includes self-identified women, gender queer and trans folks, and all those who have suffered from historical oppression.</p> 
+<p>*Who is a woman? We are interpreting this to mean one who has been disempowered through gender and/or sex in the social system. We are calling forward these voices of marginalized identities to raise our voices together in this space. This includes self-identified women, gender queer and trans folks, and all those who have suffered from historical oppression.</p> 
   <hr>
 </div>
 
